--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@hgc-ab/debug-service": "^1.0.15",
-    "basic-auth": "2.0.1",
-    "statuses": "2.0.0",
-    "type-is": "1.6.18"
+    "basic-auth": "^2.0.1",
+    "statuses": "^2.0.0",
+    "type-is": "^1.6.18"
   },
   "devDependencies": {
     "jest": "^26.6.3"
