Added the new SDK

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev-test": "jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
-    "@hgc-ab/debug-service": "^1.0.15",
+    "@hgc-sdk/logger": "^1.0.0",
     "basic-auth": "^2.0.1",
     "statuses": "^2.0.0",
     "type-is": "^1.6.18"
